--- a/selenium-server.cabal
+++ b/selenium-server.cabal
@@ -22,6 +22,7 @@ library
                      , http-conduit
                      , http-conduit-downloader
                      , network
+                     , process
                      , random
                      , regex-tdfa
                      , utf8-string
@@ -32,5 +33,5 @@ test-suite test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      tests
   main-is:             main.hs
-  build-depends:       base, hspec, selenium-server
+  build-depends:       base, hspec, selenium-server, text, webdriver
   default-language:    Haskell2010
