--- a/selenium-server.cabal
+++ b/selenium-server.cabal
@@ -33,5 +33,5 @@ test-suite test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      tests
   main-is:             main.hs
-  build-depends:       base, hspec, selenium-server, text, webdriver
+  build-depends:       base, hspec, selenium-server, text, webdriver >= 0.5.3.2
   default-language:    Haskell2010
